--- a/website/index.html
+++ b/website/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Preprocessing Starter</title>
-	<link rel="stylesheet" href="css/index.css">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Spa</title>
+    <script
+      src="https://kit.fontawesome.com/8ad599954f.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
 
-<body>
+  <body>
+    <div class="topbar">
+      <ul>
+        <li><a href="">Meeting Planners</a></li>
+        <li><a href="">Travel Trade</a></li>
+        <li><a href="">Press</a></li>
+        <li><a href="">Language</a></li>
+      </ul>
+    </div>
+    <div class="mainNav">
+      <div class="menuSecOne">
+        <div>
+          <p>Spa</p>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href="">Explore</a></li>
+            <li><a href="plan.html">Plan</a></li>
+            <li><a href="">Stay</a></li>
+          </ul>
+        </div>
+      </div>
 
-	<h1>Preprocessing Starter File</h1>
-</body>
+      <div class="menuSecTwo">
+        <div class="social">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-youtube"></i>
+        </div>
+        <div class="weather">
+          <p>73</p>
+        </div>
+        <div class="search">
+          <i class="fas fa-search"></i>
+        </div>
+      </div>
+    </div>
+    <div class="hero">
+      <h1>San Diego's Best Luxury Day Spas</h1>
+      <h2>The Best of the Best</h2>
+      <p>
+        Whether you're an adventurous traveler or homebody, the good news is
+        that some of the world's most spectacular luxury spas are right here in
+        San Diego.
+      </p>
+    </div>
+    <div class="heroImage"></div>
+  </body>
 </html>
