--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <div class="mainNav">
       <div class="menuSecOne">
         <div>
-          <p>Spa</p>
+          <p><a href="index.html">Spa</a></p>
         </div>
         <div class="menu">
           <ul>
             <li><a href="">Explore</a></li>
             <li><a href="plan.html">Plan</a></li>
-            <li><a href="">Stay</a></li>
+            <li><a href="stay.html">Stay</a></li>
           </ul>
         </div>
       </div>
@@ -65,7 +65,12 @@
         that some of the world's most spectacular luxury spas are right here in
         San Diego.
       </p>
+      <div><a class="button" href="stay.html">Book Now</a></div>
     </div>
     <div class="heroImage"></div>
+    <div class="secOne">
+      <p>Rejuvenate your Mind and Body</p>
+      <p></p>
+    </div>
   </body>
 </html>
