--- a/index.html
+++ b/index.html
@@ -69,8 +69,90 @@
     </div>
     <div class="heroImage"></div>
     <div class="secOne">
-      <p>Rejuvenate your Mind and Body</p>
-      <p></p>
+      <h1>Rejuvenate your Mind and Body</h1>
+      <p>Nunc consectetur quam nec leo ultricies, in imperdiet leo auctor. Nullam vehicula ullamcorper tincidunt. Pellentesque dictum felis tellus. Proin rutrum odio id placerat consectetur. Suspendisse in risus lorem. Morbi velit ligula, porttitor et est sed, posuere auctor eros. Nulla finibus orci ac ultricies imperdiet. Nullam pellentesque enim sed magna efficitur sollicitudin. Donec placerat, eros non viverra porta, felis tellus ullamcorper velit, id pretium magna quam in enim. Morbi ac efficitur tortor. Cras lacinia dictum mauris.</p>
+      <h2>The spa at the grand del mar</h2>
+      <p>Fusce ullamcorper, dui sed tempor suscipit, massa lectus porttitor metus, at consequat magna arcu eget tellus. Nulla vulputate dui fermentum lacinia rhoncus. Integer turpis ante, iaculis fringilla sapien nec, molestie faucibus est. Aliquam commodo ex id diam molestie, eget pellentesque nunc congue. Phasellus sed quam hendrerit odio ornare malesuada. Vivamus lobortis arcu sed ante volutpat tincidunt. Integer non aliquet magna.</p>
+      <h2>The spa at the del</h2>
+      <p>Donec elementum lacinia lectus in commodo. Ut commodo ultrices dapibus. Nulla leo turpis, consectetur a facilisis nec, ultricies in augue. Nullam ornare mauris dolor, sed luctus neque dictum at. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Mauris eu condimentum lectus. Curabitur in tellus auctor, vehicula est in, consequat dolor. Aenean feugiat et eros eu sagittis. Nunc tristique condimentum purus, ut hendrerit velit rhoncus vitae. Fusce semper elit sed ullamcorper dictum. Nam sed eleifend risus. Aliquam eget lorem consectetur, commodo lectus at, rhoncus odio. </p>
+      <h2>Spaterre at kona kai</h2>
+      <p>Ut vestibulum ante sit amet diam vehicula tristique. In ullamcorper arcu ut congue consectetur. Integer dictum, diam in condimentum condimentum, dui urna posuere libero, ut placerat nunc turpis laoreet sapien. Vivamus laoreet imperdiet sem sit amet faucibus. Suspendisse hendrerit felis at neque pellentesque dictum. Nam mollis accumsan justo, a dictum libero interdum non. Maecenas eu iaculis mi.</p>
+      <h2 class="la">The spa at rancho la valencia</h2>
+      <p>Curabitur non tellus sed leo vehicula ultrices. Nulla vitae lorem facilisis, suscipit dui pharetra, scelerisque justo. Quisque tempor eros eget lobortis suscipit. Praesent a justo ut ante iaculis dapibus. Nam dignissim tortor vel orci dapibus, sed sollicitudin leo ornare. Morbi suscipit bibendum est vitae volutpat. Proin sagittis nunc sem, eu malesuada urna venenatis ac. Nam placerat sodales risus, non ullamcorper ex volutpat imperdiet. In hac habitasse platea dictumst. Aenean quis felis in dui volutpat sodales sed id dolor.</p>
+      <h2 class="la">The spa at omni la costa</h2>
+      <p>Quisque justo arcu, dictum vel malesuada sed, luctus a felis. Donec maximus lobortis augue vel vulputate. Curabitur tristique velit et massa eleifend congue. Donec neque quam, elementum id felis eu, accumsan viverra risus. Pellentesque laoreet a arcu quis ullamcorper. Sed rhoncus nulla magna, at iaculis libero vehicula ut. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+      <p class="rejuv">Rejuvenate at more Spas throughout San Diego</p>
     </div>
+    <div class="staySecThree">
+      <div class="sec one">
+        <img src="website/images/luke.jpg" alt="">
+        <div class="right">
+          <h1>Mission Bay Adventures</h1>
+          <h2>Start Discovering Deals Today</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            commodo erat elit, eget porta arcu dignissim iaculis.
+          </p>
+          <a href="">Read More</a>
+        </div>
+      </div>
+      <div class="sec two">
+        <img src="website/images/luke.jpg" alt="">
+        <div class="right">
+          <h1>Save up to 60%</h1>
+          <h2>Bliss break</h2>
+          <p>
+            Vivamus interdum massa arcu, at facilisis dolor cursus non. Duis ac
+            ex nunc.
+          </p>
+          <a href="">Read More</a>
+        </div>
+      </div>
+    </div>
+    <footer>
+          <div class="list">
+            <h1>Explore</h1>
+            <ul>
+              <li>Things to Do</li>
+              <li>Events</li>
+              <li>Coastal</li>
+              <li>Downtown & Urban</li>
+              <li>Inland Valley, Mountain & Desert</li>
+              <li>Baja California</li>
+              <li>Neighborhood Maps</li>
+            </ul>
+          </div>
+          <div class="list">
+            <h1>Plan</h1>
+            <ul>
+              <li>Offers</li>
+              <li>Weather</li>
+              <li>Getting Around</li>
+              <li>Travel Guides & Apps</li>
+              <li>Family Travel</li>
+              <li>LGBT</li>
+              <li>International Travelers</li>
+              <li>Destination Wedding</li>
+              <li>Visitor Information & Services</li>
+            </ul>
+          </div>
+          <div class="list">
+            <h1>Stay</h1>
+            <ul>
+              <li>Hotels & Resorts</li>
+              <li>Bed & Breakfast</li>
+              <li>Camping & RV Parks</li>
+              <li>Hostels</li>
+              <li>Vacation Rentals</li>
+              <li>Other Accommodations</li>
+            </ul>
+          </div>
+          <div class="list">
+            <div class="social">
+              <h2>Follow Us</h2>
+            </div>
+          </div>
+          
+    </footer>
   </body>
 </html>
