--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
     <div class="staySecThree">
       <div class="sec one">
-        <img src="website/images/midway.jpg" alt="" />
+        <img src="website/images/luke.jpg" alt="" />
         <div class="right">
           <h1>WeekDays? More like weekyays!</h1>
           <h2>Book your midweek stay today</h2>
@@ -158,6 +158,46 @@
             ex nunc.
           </p>
           <a href="">Read More</a>
+        </div>
+      </div>
+    </div>
+    <div class="secFour">
+      <div class="heading">
+        <h1>Related Articles and Features</h1>
+        <div><a class="button" href="">View All Articles</a></div>
+      </div>
+      <div class="boxes">
+        <div class="box one">
+          <div>
+            <h2>Attractions</h2>
+            <h3>Must-see california theme parks & Attractions</h3>
+            <h4>Not to be missed!</h4>
+          </div>
+          <p>+</p>
+        </div>
+        <div class="box two">
+          <div>
+            <h2>Attractions</h2>
+            <h3>Must-see california theme parks & Attractions</h3>
+            <h4>Not to be missed!</h4>
+          </div>
+          <p>+</p>
+        </div>
+        <div class="box three">
+          <div>
+            <h2>Attractions</h2>
+            <h3>Must-see california theme parks & Attractions</h3>
+            <h4>Not to be missed!</h4>
+          </div>
+          <p>+</p>
+        </div>
+        <div class="box four">
+          <div>
+            <h2>Attractions</h2>
+            <h3>Must-see california theme parks & Attractions</h3>
+            <h4>Not to be missed!</h4>
+          </div>
+          <p>+</p>
         </div>
       </div>
     </div>
