--- a/stay.html
+++ b/stay.html
@@ -147,7 +147,7 @@
         </div>
       </div>
       <div class="sec two">
-        <img src="website/images/luke.jpg" alt="">
+        <img src="website/images/midway.jpg" alt="">
         <div class="right">
           <h1>Beach for two</h1>
           <h2>Bliss break</h2>
