--- a/index.html
+++ b/index.html
@@ -201,6 +201,28 @@
         </div>
       </div>
     </div>
+    <div class="secFive">
+      <div class="orange">
+        <h1>Stay</h1>
+        <h2>in touch</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mattis
+          est in lacinia tincidunt. Etiam at augue feugiat, eleifend libero in,
+          ultricies erat. Orci varius natoque penatibus et magnis dis.
+        </p>
+        <div><a class="button" href="">Sign Up</a></div>
+      </div>
+      <div class="blue">
+        <h1>Visitors</h1>
+        <h2>planning guide</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mattis
+          est in lacinia tincidunt. Etiam at augue feugiat, eleifend libero in,
+          ultricies erat. Orci varius natoque penatibus.
+        </p>
+        <div><a class="button" href="">Read More</a></div>
+      </div>
+    </div>
     <footer>
       <div class="list">
         <h1>Explore</h1>
