--- a/stay.html
+++ b/stay.html
@@ -20,40 +20,42 @@
   </head>
 
   <body>
-    <div class="topbar">
-      <ul>
-        <li><a href="">Meeting Planners</a></li>
-        <li><a href="">Travel Trade</a></li>
-        <li><a href="">Press</a></li>
-        <li><a href="">Language</a></li>
-      </ul>
-    </div>
-    <div class="mainNav">
-      <div class="menuSecOne">
-        <div>
-          <p><a href="index.html">Spa</a></p>
-        </div>
-        <div class="menu">
-          <ul>
-            <li><a href="">Explore</a></li>
-            <li><a href="plan.html">Plan</a></li>
-            <li><a href="">Stay</a></li>
-          </ul>
-        </div>
+    <div id="myHeader">
+      <div class="topbar">
+        <ul>
+          <li><a href="">Meeting Planners</a></li>
+          <li><a href="">Travel Trade</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">Language</a></li>
+        </ul>
       </div>
+      <div class="mainNav">
+        <div class="menuSecOne">
+          <div>
+            <p><a href="index.html">Spa</a></p>
+          </div>
+          <div class="menu">
+            <ul>
+              <li><a href="">Explore</a></li>
+              <li><a href="plan.html">Plan</a></li>
+              <li><a href="">Stay</a></li>
+            </ul>
+          </div>
+        </div>
 
-      <div class="menuSecTwo">
-        <div class="social">
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-youtube"></i>
-        </div>
-        <div class="weather">
-          <p>73</p>
-        </div>
-        <div class="search">
-          <i class="fas fa-search"></i>
+        <div class="menuSecTwo">
+          <div class="social">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+          <div class="weather">
+            <p>73</p>
+          </div>
+          <div class="search">
+            <i class="fas fa-search"></i>
+          </div>
         </div>
       </div>
     </div>
@@ -135,7 +137,7 @@
     </div>
     <div class="staySecThree">
       <div class="sec one">
-        <img src="website/images/luke.jpg" alt="">
+        <img src="website/images/luke.jpg" alt="" />
         <div class="right">
           <h1>Kids Free San Diego</h1>
           <h2>Start Discovering Deals Today</h2>
@@ -147,7 +149,7 @@
         </div>
       </div>
       <div class="sec two">
-        <img src="website/images/midway.jpg" alt="">
+        <img src="website/images/midway.jpg" alt="" />
         <div class="right">
           <h1>Beach for two</h1>
           <h2>Bliss break</h2>
@@ -159,5 +161,113 @@
         </div>
       </div>
     </div>
+    <div class="secFive">
+      <div class="orange">
+        <h1>Stay</h1>
+        <h2>in touch</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mattis
+          est in lacinia tincidunt. Etiam at augue feugiat, eleifend libero in,
+          ultricies erat. Orci varius natoque penatibus et magnis dis.
+        </p>
+        <div><a class="button" href="">Sign Up</a></div>
+      </div>
+      <div class="blue">
+        <h1>Visitors</h1>
+        <h2>planning guide</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mattis
+          est in lacinia tincidunt. Etiam at augue feugiat, eleifend libero in,
+          ultricies erat. Orci varius natoque penatibus.
+        </p>
+        <div><a class="button" href="">Read More</a></div>
+      </div>
+    </div>
+    <div class="staySecThree">
+      <div class="sec one">
+        <img src="website/images/luke.jpg" alt="" />
+        <div class="right">
+          <h1>Kids Free San Diego</h1>
+          <h2>Start Discovering Deals Today</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            commodo erat elit, eget porta arcu dignissim iaculis.
+          </p>
+          <a href="">Read More</a>
+        </div>
+      </div>
+      <div class="sec two">
+        <img src="website/images/midway.jpg" alt="" />
+        <div class="right">
+          <h1>Beach for two</h1>
+          <h2>Bliss break</h2>
+          <p>
+            Vivamus interdum massa arcu, at facilisis dolor cursus non. Duis ac
+            ex nunc.
+          </p>
+          <a href="">Read More</a>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="list">
+        <h1>Explore</h1>
+        <ul>
+          <li>Things to Do</li>
+          <li>Events</li>
+          <li>Coastal</li>
+          <li>Downtown & Urban</li>
+          <li>Inland Valley, Mountain & Desert</li>
+          <li>Baja California</li>
+          <li>Neighborhood Maps</li>
+        </ul>
+      </div>
+      <div class="list">
+        <h1>Plan</h1>
+        <ul>
+          <li>Offers</li>
+          <li>Weather</li>
+          <li>Getting Around</li>
+          <li>Travel Guides & Apps</li>
+          <li>Family Travel</li>
+          <li>LGBT</li>
+          <li>International Travelers</li>
+          <li>Destination Wedding</li>
+          <li>Visitor Information & Services</li>
+        </ul>
+      </div>
+      <div class="list">
+        <h1>Stay</h1>
+        <ul>
+          <li>Hotels & Resorts</li>
+          <li>Bed & Breakfast</li>
+          <li>Camping & RV Parks</li>
+          <li>Hostels</li>
+          <li>Vacation Rentals</li>
+          <li>Other Accommodations</li>
+        </ul>
+      </div>
+      <div class="list">
+        <div class="social">
+          <h2>Follow Us</h2>
+        </div>
+      </div>
+    </footer>
+    <script>
+      window.onscroll = function () {
+        myFunction();
+      };
+
+      var header = document.getElementById("myHeader");
+      var sticky = header.offsetTop;
+
+      function myFunction() {
+        if (window.pageYOffset > sticky) {
+          header.classList.add("sticky");
+        } else {
+          header.classList.remove("sticky");
+        }
+      }
+    </script>
   </body>
 </html>
