--- a/index.html
+++ b/index.html
@@ -177,25 +177,25 @@
         </div>
         <div class="box two">
           <div>
-            <h2>Attractions</h2>
-            <h3>Must-see california theme parks & Attractions</h3>
-            <h4>Not to be missed!</h4>
+            <h2>Surfing & Stand Up Paddleboard</h2>
+            <h3>Rob Machado</h3>
+            <h4>Surf-Scene Specialist</h4>
           </div>
           <p>+</p>
         </div>
         <div class="box three">
           <div>
-            <h2>Attractions</h2>
-            <h3>Must-see california theme parks & Attractions</h3>
-            <h4>Not to be missed!</h4>
+            <h2>Breweries</h2>
+            <h3>Sand Dieago Breweries</h3>
+            <h4>The complete list of breweries in the country</h4>
           </div>
           <p>+</p>
         </div>
         <div class="box four">
           <div>
-            <h2>Attractions</h2>
-            <h3>Must-see california theme parks & Attractions</h3>
-            <h4>Not to be missed!</h4>
+            <h2>Hiking</h2>
+            <h3>Fall color hikes in san diego</h3>
+            <h4>5 Hikes Amongst San Diego's Fall Colors and Foliage</h4>
           </div>
           <p>+</p>
         </div>
